# ios-cmake

./: .gitignore  CMakeLists.txt  CppInterface.h  CppInterface.mm  LICENSE  README.md  ViewController.m  build-ios.sh  build-sim.sh  build-sim64.sh  build.sh  generate-project.sh  ios.cmake  version.cmake
cppframework/: CMakeLists.txt  Foo.cpp  Foo.h  Foo.hh  framework.plist.in  install_name.sh
tests/: CMakeLists.txt  Tests.m
